styles/main.css
* {
  box-sizing: border-box;
}

body {
  height: 100vh;
  margin: 0;
  background-color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
}

header {
  background-color: darkcyan;
  width: 600px;
  height: 150px;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}

div.header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width: 600px;
}
.grid-wrapper {
  height: 65vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.grid {
  align-items: center;
  /* box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2); */
  display: flex;
  flex-wrap: wrap;
  height: 100%;
  justify-content: center;
  /* height: 600px; */
  width: 600px;
  background-color: white;
}

.grid div {
  border: 1px solid lightgrey;
  flex-grow: 1;
  height: 5%;
  width: 5%;
}

.grid div.frog {
  background-image: url('../assets/jing.fm-cute-frog-clipart-160942.png');
  background-repeat: no-repeat;
  background-size: contain;
  cursor: pointer;
}

footer {
  background-color: cornflowerblue;
  margin-top: 90px;
  width: 600px;
}

.water {
  background-color: rgb(84, 166, 254);
}
.grid div.safety-pads {
  background-image: url('../assets/jing.fm-cute-frog-clipart-160942.png');
  background-position: 10em;
  /* background-color: rgb(7, 145, 23); */
  /* border-radius: 6px; */
  /* border-width: 2px;
  border-color: black; */
}
.water-safety {
  background-color: rgb(254, 211, 103);
}
.road {
  background-color: rgb(177, 177, 177);
}
.road-safety {
  background-color: rgb(254, 211, 103);
}
.obstacles {
  /* background-color: rgb(184, 57, 11); */
  /* background-image: url('../assets/animated-car-gif-png.png'); */
  background-color: brown;
}
.objects {
  background-color: rgb(19, 106, 43);
}



.start {
  background-color: rgb(254, 211, 103);
}
.game-over {
  display: none;
}

